# gz_ros2_control

./: .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  tracks.yaml
.github/: CODEOWNERS
.github/workflows/: ci-check-docs.yml  ci-format.yaml  ci-humble.yaml  ci-iron.yaml  ci-jazzy.yaml  ci-rolling.yaml  ci.yaml
Dockerfile/: Dockerfile
config/: tricycle_drive_controller.yaml
debian/: changelog  changelog.em  compat.em  control  control.em  copyright  copyright.em  gbp.conf  gbp.conf.em  rules  rules.em
debian/source/: format.em  options.em
doc/: index.rst
gz_ros2_control/: CHANGELOG.rst  CMakeLists.txt  gz_hardware_plugins.xml  package.xml
gz_ros2_control/include/gz_ros2_control/: gz_ros2_control_plugin.hpp  gz_system.hpp  gz_system_interface.hpp
gz_ros2_control/src/: gz_ros2_control_plugin.cpp  gz_system.cpp
gz_ros2_control_demos/: CHANGELOG.rst  CMakeLists.txt  package.xml
gz_ros2_control_demos/config/: ackermann_drive_controller.yaml  cart_controller_effort.yaml  cart_controller_velocity.yaml  cartpole_controller_velocity.yaml  diff_drive_controller_velocity.yaml  gripper_controller_effort.yaml  gripper_controller_position.yaml  tricycle_drive_controller.yaml
gz_ros2_control_demos/examples/: example_ackermann_drive.cpp  example_diff_drive.cpp  example_effort.cpp  example_gripper.cpp  example_position.cpp  example_tricycle_drive.cpp  example_velocity.cpp
gz_ros2_control_demos/launch/: ackermann_drive_example.launch.py  cart_example_effort.launch.py  cart_example_position.launch.py  cart_example_velocity.launch.py  diff_drive_example.launch.py  gripper_mimic_joint_example.launch.py  gripper_mimic_joint_example.launch.xml  gripper_mimic_joint_example_effort.launch.py  gripper_mimic_joint_example_effort.launch.xml  gripper_mimic_joint_example_position.launch.py  gripper_mimic_joint_example_position.launch.xml  pendulum_example_effort.launch.py  pendulum_example_position.launch.py  tricycle_drive_example.launch.py
gz_ros2_control_demos/urdf/: test_ackermann_drive.xacro.urdf  test_cart_effort.xacro.urdf  test_cart_position.xacro.urdf  test_cart_velocity.xacro.urdf  test_diff_drive.xacro.urdf  test_gripper_mimic_joint.xacro.urdf  test_gripper_mimic_joint_effort.xacro.urdf  test_gripper_mimic_joint_position.xacro.urdf  test_pendulum_effort.xacro.urdf  test_pendulum_position.xacro.urdf  test_tricycle_drive.xacro.urdf
gz_ros2_control_tests/: CHANGELOG.rst  CMakeLists.txt  package.xml
gz_ros2_control_tests/config/: cart_controller_position.yaml  cartpole_controller_position.yaml
gz_ros2_control_tests/src/: test_position.cpp
gz_ros2_control_tests/tests/: position_test.py
gz_ros2_control_tests/urdf/: test_cart_position.xacro.urdf
ign_ros2_control/: CHANGELOG.rst  CMakeLists.txt  ign_hardware_plugins.xml  package.xml
ign_ros2_control/include/ign_ros2_control/: MimicJointSystem.hh  ign_ft_sensor.hpp  ign_fts_sensor.hpp  ign_ros2_control_plugin.hpp  ign_sensor_interface.hpp  ign_system.hpp  ign_system_interface.hpp
ign_ros2_control/src/: MimicJointSystem.cc  ign_ft_sensor.cpp  ign_fts_sensor.cpp  ign_ros2_control_parameters.yaml  ign_ros2_control_plugin.cpp  ign_system.cpp
ign_ros2_control_demos/: CHANGELOG.rst  CMakeLists.txt  package.xml
ign_ros2_control_demos/config/: ackermann_drive_controller.yaml  cartpole_controller_velocity.yaml  diff_drive_controller_velocity.yaml  gripper_controller.yaml  tricycle_drive_controller.yaml
ign_ros2_control_demos/examples/: example_diff_drive.cpp  example_effort.cpp  example_gripper.cpp  example_position.cpp  example_velocity.cpp
ign_ros2_control_demos/launch/: ackermann_drive_example.launch.py  cart_example_effort.launch.py  cart_example_position.launch.py  cart_example_velocity.launch.py  diff_drive_example.launch.py  gripper_mimic_joint_example.launch.py  pendulum_example_effort.launch.py  pendulum_example_position.launch.py  tricycle_drive_example.launch.py
ign_ros2_control_demos/urdf/: test_ackermann_drive.xacro.urdf  test_cart_effort.xacro.urdf  test_cart_position.xacro.urdf  test_cart_velocity.xacro.urdf  test_diff_drive.xacro.urdf  test_gripper_mimic_joint.xacro.urdf  test_pendulum_effort.xacro.urdf  test_pendulum_position.xacro.urdf  test_tricycle_drive.xacro.urdf
ignition_ros2_control/: CHANGELOG.rst  CMakeLists.txt  LICENSE  ignition_hardware_plugins.xml  package.xml
ignition_ros2_control/include/ignition_ros2_control/: ignition_ros2_control_plugin.hpp  ignition_system.hpp  ignition_system_interface.hpp
ignition_ros2_control/src/: ignition_ros2_control_plugin.cpp  ignition_system.cpp
ignition_ros2_control_demos/: CHANGELOG.rst  CMakeLists.txt  package.xml
ignition_ros2_control_demos/config/: cartpole_controller_effort.yaml  cartpole_controller_position.yaml  cartpole_controller_velocity.yaml
ignition_ros2_control_demos/examples/: example_effort.cpp  example_position.cpp  example_velocity.cpp
ignition_ros2_control_demos/launch/: cart_example_effort.launch.py  cart_example_position.launch.py  cart_example_velocity.launch.py
ignition_ros2_control_demos/urdf/: test_cart_effort.xacro.urdf  test_cart_position.xacro.urdf  test_cart_velocity.xacro.urdf
tests/: CMakeLists.txt
urdf/: test_cart_effort.xacro.urdf  test_cart_velocity.xacro.urdf
