<?xml version="1.0"?>
<package format="3">
  <name>gz_ros2_control</name>
  <version>0.5.0</version>
  <description>Gazebo ros2_control package allows to control simulated robots using ros2_control framework.</description>
  <maintainer email="alejandro@openrobotics.com">Alejandro Hernández</maintainer>
  <author>Alejandro Hernández</author>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <!-- default version to use in official ROS2 packages is Ignition Fortress for ROS2 Rolling -->
  <depend condition="$IGNITION_VERSION == ''">ignition-gazebo6</depend>
  <depend condition="$IGNITION_VERSION == citadel">ignition-gazebo3</depend>
  <depend condition="$IGNITION_VERSION == edifice">ignition-gazebo5</depend>
  <depend condition="$IGNITION_VERSION == fortress">ignition-gazebo6</depend>
  <depend condition="$IGNITION_VERSION == garden">ignition-gazebo7</depend>

  <depend condition="$IGNITION_VERSION == ''">ignition-plugin1</depend>
  <depend condition="$IGNITION_VERSION == garden">ignition-plugin2</depend>
  <depend>ignition-plugin</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
      <build_type>ament_cmake</build_type>
      <gz_ros2_control plugin="${prefix}/gz_hardware_plugins.xml"/>
  </export>
</package>
