<?xml version="1.0"?>
<package format="3">
  <name>ignition_ros2_control</name>
  <version>0.0.0</version>
  <description>Lol</description>
  <maintainer email="alejandro@openrobotics.com">Alejandro Hernández</maintainer>
  <author>Alejandro Hernández</author>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>angles</depend>
  <depend>ament_index_cpp</depend>
  <depend>ignition-gazebo5</depend>
  <depend>ignition-physics4</depend>
  <depend>ignition-plugin1</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>urdf</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
      <build_type>ament_cmake</build_type>
      <ignition_ros2_control plugin="${prefix}/ignition_hardware_plugins.xml"/>
  </export>
</package>
